--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
 ]
-license = "GPL"
+license = "GPL-3.0-or-later"
 
 [build-system]
 requires = ["uv_build>=0.8.14,<0.9.0"]
