--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = [
     { name = "Steven", email = "erewhon@flatland.org" }
 ]
-description = "Add your description here"
+description = "A library for controlling telescopes (initially Seestars)"
 readme = "README.md"
 requires-python = ">=3.12"
 classifiers = [
