--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "tzlocal",
     "numpy",
     "numpy-typing>=1.1.1",
-    "opencv-python>=4.11.0.86",
+    "opencv-python",
     "psutil>=5.9.8",
     "pillow>=11.3.0",
 ]
